# Dragonfly

cw_serv_ws/bags/: bag.txt  bags_0.db3  metadata.yaml
cw_serv_ws/install/: local_setup.sh  setup.sh
cw_serv_ws/install/action_interface/include/action_interface/action_interface/srv/: cmd.hpp
cw_serv_ws/install/action_interface/include/action_interface/action_interface/srv/detail/: cmd__builder.hpp  cmd__functions.c  cmd__rosidl_typesupport_fastrtps_c.h  cmd__rosidl_typesupport_introspection_c.h  cmd__rosidl_typesupport_introspection_cpp.hpp  cmd__struct.hpp
cw_serv_ws/install/action_interface/local/lib/python3.10/dist-packages/action_interface/: _action_interface_s.ep.rosidl_typesupport_fastrtps_c.c
cw_serv_ws/install/action_interface/local/lib/python3.10/dist-packages/action_interface/srv/: __init__.py
cw_serv_ws/install/action_interface/share/action_interface/: package.sh
cw_serv_ws/install/action_interface/share/action_interface/srv/: Cmd.srv
cw_serv_ws/install/cw_serv/share/ament_index/resource_index/parent_prefix_path/: cw_serv
cw_serv_ws/install/cw_serv/share/cw_serv/: package.sh
cw_serv_ws/install/cw_serv/share/cw_serv/launch/: cwserv.launch.py
cw_serv_ws/install/cw_serv/share/cw_serv/launch/settings_for_launch_file/: main_settings.ini
cw_serv_ws/log/: latest_build
cw_serv_ws/logs/: bag.txt  cw_log 04-12-23 18-33-48.txt  cw_log 12-12-23 15-12-41.txt  cw_log 17-12-23 18-38-32.txt  cw_log 21-11-23 22-08-03.txt  cw_log 22-11-23 01-39-52.txt  cw_log 22-11-23 21-31-16.txt  cw_log 23-11-23 22-47-27.txt  cw_log 27-11-23 15-37-35.txt  cw_log 27-11-23 22-43-04.txt  cw_log 28-11-23 21-42-19.txt
cw_serv_ws/models/: drone.sdf
cw_serv_ws/models/Drone/: model.config  model.sdf
cw_serv_ws/src/action_interface/: CMakeLists.txt
cw_serv_ws/src/cw_serv/: CMakeLists.txt
cw_serv_ws/src/cw_serv/include/cw_serv/: Base.hpp  MainNode.hpp
cw_serv_ws/src/cw_serv/include/cw_serv/actions/: ActionClient.hpp  ActionServer.hpp
cw_serv_ws/src/cw_serv/include/cw_serv/cw_structs/: RunParameters.hpp  Tower.hpp
cw_serv_ws/src/cw_serv/include/cw_serv/devices/: Device.hpp  RtspCamera.hpp
cw_serv_ws/src/cw_serv/include/cw_serv/modules/: Logger.hpp  Module.hpp  Robot.hpp  TCPServer.hpp
cw_serv_ws/src/cw_serv/include/cw_serv/modules/ServerParts/: ClientManager.hpp  PacketParser.hpp  TCPClient.hpp
cw_serv_ws/src/cw_serv/include/cw_serv/submodules/: Copyist.hpp  HardwareManager.hpp  Recorder.hpp  SubModule.hpp
cw_serv_ws/src/cw_serv/launch/: cw_serv_launch.py
cw_serv_ws/src/cw_serv/logs/: cw_log 20-11-23 18-32-45.txt
cw_serv_ws/src/cw_serv/src/: Base.cpp  MainNode.cpp  main.cpp
cw_serv_ws/src/cw_serv/src/actions/: ActionClient.cpp  ActionServer.cpp
cw_serv_ws/src/cw_serv/src/cw_structs/: RunParameter.cpp  Tower.cpp
cw_serv_ws/src/cw_serv/src/devices/: Device.cpp  RtspCamera.cpp
cw_serv_ws/src/cw_serv/src/modules/: Logger.cpp  Module.cpp  Robot.cpp  TCPServer.cpp
cw_serv_ws/src/cw_serv/src/modules/ServerParts/: ClientManager.cpp  PacketParser.cpp  TCPClient.cpp
cw_serv_ws/src/cw_serv/src/submodules/: Copyist.cpp  HardwareManager.cpp  Recorder.cpp  SubModule.cpp
cw_serv_ws/worlds/: drone.world
cw_serv_ws/worlds/map_for_drone/: model.config  model.sdf
logs/: cw_log 20-11-23 22-13-08.txt
